[package]
name = "loglyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
colored_json = "5.0.0"
flate2 = "1.1.2"
jmespath = {version = "=0.4.0", features = ["sync"]}
serde_json = "1.0.143"
thiserror = "2.0.16"
time = {version = "0.3.43", features = ["parsing", "macros"]}
